# cpp-playground

./: .gitignore  CMakeLists.txt  build.sh  build_and_run.sh
lib/lib1/: CMakeLists.txt  build.sh
lib/lib1/src/: hey.cpp  hey.h
lib/rust/: Cargo.toml
lib/rust/src/: lib.rs
src/: main.cpp
